Add filters in methods GetReports (date_from,date_to)
